--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <html lang="en">
 <head>
-  <title>John Doe</title>
+  <title>Jiangze Han</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -67,10 +67,10 @@
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
                 <p><b>john at doe.com</b><br>
                 <p>Random Department<br>
-                University of Randomness<br>
-                Street<br>
-                City <br>
-                Country<br>
+                University of British Columbia<br>
+                2053 Main Mall<br>
+                Vancouver <br>
+                Canada<br>
                 </p>
             </div>
             
