--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
-                <p><b>john at doe.com</b><br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Jiangze Han</b></div><br>
+                <p><b>jiangze.han@sauder.ubc.ca</b><br>
                 <p>Random Department<br>
                 University of British Columbia<br>
                 2053 Main Mall<br>
